{
    "name": "InputControls",
    "maps": [
        {
            "name": "Tocar",
            "id": "18d463cb-ebe9-433e-8e8b-e39dfad2c2da",
            "actions": [
                {
                    "name": "InputToque",
                    "type": "PassThrough",
                    "id": "d84e3546-f3e0-475a-b761-bb4b5bd1b781",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ContactoPrimario",
                    "type": "PassThrough",
                    "id": "75049a33-7ab1-441f-905a-be091c76eb31",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PosiciónContacto",
                    "type": "PassThrough",
                    "id": "e896520b-c1d0-475f-ab3a-e06d112c534f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c247a391-b023-462e-b593-a21c41dc2293",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "ContactoPrimario",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c025d006-4ede-4ab9-ae7d-b4dd243e1b2f",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PosiciónContacto",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a558e22f-9d09-4ad0-bed5-2d074a75b9b9",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InputToque",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}